# flc-flashcards

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.cpp  mm  xmake.lua
include/: console.hpp  flashcard.hpp  gui.hpp  views.hpp
src/: console.cpp  flashcard.cpp  gui.cpp  main.cpp  views.cpp
test/assets/: regiones.csv  regiones.json
tests/assets/: de.json  regiones.json  regiones2.json  regiones_v2.json  regiones_v2_error.json
